--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gianluca Mura">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Boolando</title>
 </head>
@@ -12,7 +13,26 @@
 
     <!-- Header -->
     <header>
-        <nav></nav>
+        <nav class="d-flex w-100">
+            <div class="container d-flex">
+                <div class="menu-navigation w-30">
+                    <ul>
+                        <li><a href="#">Donna</a></li>
+                        <li><a href="#">Uomo</a></li>
+                        <li><a href="#">Bambini</a></li>
+                    </ul>
+                </div>
+                <div class="menu-logo d-flex w-30">
+                    <img class="w-50" src="images/boolean-logo.png" alt="Logo Boolando">
+                </div>
+                <div class="menu-cta w-30">
+                    <a href="#"><i class="fa-solid fa-user"></i></a>
+                    <a href="#"><i class="fa-solid fa-heart"></i></a>
+                    <a href="#"><i class="fa-solid fa-bag-shopping"></i></a>
+
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- Main -->
