--- a/index.html
+++ b/index.html
@@ -37,12 +37,112 @@
 
     <!-- Main -->
     <main>
+        <div class="container">
 
+            <!-- First Row -->
+            <div class="d-flex row my-30">
+                <article class="w-30">
+                    <figure>
+                        <img class="w-100" src="images/1.webp" alt="Levi's">
+                        <span class="favourite"></span>
+                        <div class="label discount-50 eco-item"></div>
+                    </figure>
+                    <figcaption>
+                        <h5>Levi's</h5>
+                        <h4>Relaxed Fit Tee Unisex</h4>
+                        <h5>
+                            <span class="new-price">14,99 &euro;</span>
+                            <span class="old-price">29,99 &euro;</span>
+                        </h5>
+                    </figcaption>
+                </article>
+                <article class="w-30">
+                    <figure>
+                        <img class="w-100" src="images/2.webp" alt="Guess">
+                        <span class="favourite"></span>
+                        <div class="label discount-30"></div>
+                    </figure>
+                    <figcaption>
+                        <h5>Guess</h5>
+                        <h4>Roses Tee</h4>
+                        <h5>
+                            <span class="new-price">20,99 &euro;</span>
+                            <span class="old-price">29,99 &euro;</span>
+                        </h5>
+                    </figcaption>
+                </article>
+                <article class="w-30">
+                    <figure>
+                        <img class="w-100" src="images/3.webp" alt="Come Zucchero Filato">
+                        <span class="favourite"></span>
+                        <div class="label discount-30"></div>
+                    </figure>
+                    <figcaption>
+                        <h5>Come Zucchero Filato</h5>
+                        <h4>Voglia di Colori Pastello</h4>
+                        <h5>
+                            <span class="new-price">129,99 &euro;</span>
+                            <span class="old-price">184,99 &euro;</span>
+                        </h5>
+                    </figcaption>
+                </article>
+            </div>
+
+            <!-- Second Row -->
+            <div class="d-flex row my-30">
+                <article class="w-30">
+                    <figure>
+                        <img class="w-100" src="images/4.webp" alt="Levi's">
+                        <span class="favourite"></span>
+                        <div class="label discount-50 eco-item"></div>
+                    </figure>
+                    <figcaption>
+                        <h5>Levi's</h5>
+                        <h4>Tee Unisex</h4>
+                        <h5>
+                            <span class="new-price">14,99 &euro;</span>
+                            <span class="old-price">29,99 &euro;</span>
+                        </h5>
+                    </figcaption>
+                </article>
+                <article class="w-30">
+                    <figure>
+                        <img class="w-100" src="images/5.webp" alt="Maya Deluxe">
+                        <span class="favourite"></span>
+                        <div class="label"></div>
+                    </figure>
+                    <figcaption>
+                        <h5>Maya Deluxe</h5>
+                        <h4>Stripe Bodice</h4>
+                        <h5>
+                            <span class="new-price">99,99 &euro;</span>
+                            <!-- No Old-Price Here -->
+                        </h5>
+                    </figcaption>
+                </article>
+                <article class="w-30">
+                    <figure>
+                        <img class="w-100" src="images/6.webp" alt="Esprit">
+                        <span class="favourite"></span>
+                        <div class="label eco-item"></div>
+                    </figure>
+                    <figcaption>
+                        <h5>Esprit</h5>
+                        <h4>Maglione - Black</h4>
+                        <h5>
+                            <span class="new-price">29,99 &euro;</span>
+                            <!-- No Old-Price Here -->
+                        </h5>
+                    </figcaption>
+                </article>
+            </div>
+
+        </div>
     </main>
 
     <!-- Footer -->
     <footer>
-
+        
     </footer>
 
 </body>
