--- a/index.html
+++ b/index.html
@@ -142,7 +142,26 @@
 
     <!-- Footer -->
     <footer>
-        
+        <div class="container d-flex h-100">
+            <!-- Footer Left Section | Copyright -->
+            <div class="f-copy w-30">
+                <h3>Boolando s.r.l</h3>
+                <a href="#">Informazioni legali</a>
+                <a href="#">Informativa sulla privacy</a>
+                <a href="#">Diritto di recesso</a>
+            </div>
+            <!-- Footer Right Section | Social Link -->
+            <div class="f-social w-20">
+                <h5>Trovaci anche su</h5>
+                <div>
+                    <i class="fa-brands fa-twitter-square"></i>
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram-square"></i>
+                    <i class="fa-brands fa-pinterest-square"></i>
+                    <i class="fa-brands fa-youtube-square"></i>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
